--- a/fluxapay_backend/package.json
+++ b/fluxapay_backend/package.json
@@ -43,6 +43,10 @@
     "@types/node": "^25.0.9",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
+    "eslint": "^9.39.2",
+    "globals": "^17.1.0",
     "jest": "^30.2.0",
     "nodemon": "^3.1.11",
     "prisma": "^6.19.2",
